--- a/Melanoma/res/values/strings.xml
+++ b/Melanoma/res/values/strings.xml
@@ -18,5 +18,6 @@
     <string name="title_section2">Section 2</string>
     <string name="title_section3">Section 3</string>
     <string name="image">image</string>
+    <string name="title_activity_melanoma_photo_analyser">MelanomaPhotoAnalyser</string>
 
 </resources>
